...
			return;
		}
		setLoadingNumbers(false);
	};

	return (
		<View style={globalStyles.container.global} testID='UpdatePage'>
			<View style={globalStyles.container.button}>
				<Button
					style={globalStyles.button.global}
					contentStyle={globalStyles.buttonContent.global}
					labelStyle={globalStyles.buttonText.global}
					icon='format-list-numbered'
...
							onConfirmation: () => {
								updateMembersNumbers();
							},
							testID: 'UpdateConfirmationDialog',
						});
					}}
					testID='UpdateNumbersButton'
				>
					{t('button.updateMembersNumbers')}
				</Button>
			</View>
		</View>
	);
...
