...
		if (!nfcStatus) {
			showDialog({
				text: t('nfc.isDisabled'),
				onConfirmation: () => goToNFCSettings(),
				onDismissText: t('dialog.cancel'),
				onConfirmationText: t('nfc.settings'),
				testID: 'NFCDisabledDialog',
			});
			return false;
		}
		setWriteNFCVisible(true);
		const result = await writeNFC(id);
		if (result) showSnackbar(t('nfc.writeSuccess'));
...
							globalStyles.item,
							{ backgroundColor: theme.colors.primary },
						]}
						onPress={() => {
							goToProfile(item.key);
						}}
						testID='ItemButton'
					>
						<View>
							<Avatar.Image
								size={100}
								style={{ alignSelf: 'center', marginBottom: 10 }}
								source={{
...
			>
				<Menu.Item
					onPress={() => {
						goToProfile(item.key);
					}}
					title='Open Member'
					testID='OpenMemberMenu'
				/>
				<Menu.Item
					onPress={() => {
						wNFC(item.key);
					}}
					title='Write to NFC'
					testID='WriteNFCMenu'
				/>
				<Menu.Item
					onPress={() => {
						showDialog({
							text: t('dialog.deleteConfirmation'),
							onConfirmation: async () => {
...
										}
									}
									showSnackbar(t('dialog.deletedMember'));
								} else showSnackbar(t('dialog.deletedMemberFailed'));
								setRefreshFlatlist(!refreshFlatlist);
							},
							testID: 'DeleteConfirmationDialog',
						});
					}}
					title='Delete Member'
					testID='DeleteMemberMenu'
				/>
			</MenuComponent>
		);
	};

	const renderMemberHint = ({ item }) => {
...
					onPress={() => {
						Keyboard.dismiss();

						setName(item.item);
						getMembersByName(item.item);
					}}
					testID='NameHintList'
				>
					<Text style={{ padding: 5 }}>{item.item}</Text>
				</TouchableRipple>
				<Divider bold={true} />
			</>
		);
...
					}}
					style={globalStyles.modalContainer.global}
					contentContainerStyle={[
						globalStyles.modalContentContainer.global,
						{ backgroundColor: theme.colors.primaryContainer },
					]}
					testID='OrderModal'
				>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='sort-alphabetical-variant'
						mode='elevated'
						onPress={() => {
							orderMembersName();
							setOrderModal(false);
						}}
						testID='OrderNameButton'
					>
						{t('feature.orderName')}
					</Button>

					<Button
						style={globalStyles.button.global}
...
						icon='sort-numeric-variant'
						mode='elevated'
						onPress={() => {
							orderMembersNumber();
							setOrderModal(false);
						}}
						testID='OrderNumberButton'
					>
						{t('feature.orderNumber')}
					</Button>

					<Button
						style={globalStyles.button.global}
...
						mode='elevated'
						onPress={() => {
							orderMembersName();
							orderMembersEndDate();
							setOrderModal(false);
						}}
						testID='OrderDateButton'
					>
						{t('feature.orderEndDate')}
					</Button>
				</Modal>

				<Dialog
...
					</Dialog.Content>
				</Dialog>
			</Portal>

			<View
				style={globalStyles.container.global}
				testID='SearchPage'
			>
				<SearchList
					style={globalStyles.searchBar}
					icon='account'
					value={name}
					placeholder={t('member.name')}
...
					autoCapitalize='words'
					onClearIconPress={() => {
						setName('');
						setHintMemberList([]);
						getAllMembers();
					}}
					testID='NameSearch'
				/>
				<Searchbar
					style={globalStyles.searchBar}
					icon='numeric'
					value={memberNumber}
					//onChangeText={setMemberNumber}
...
					keyboardType='numeric'
					placeholder={t('member.memberNumber')}
					onClearIconPress={() => {
						setMemberNumber('');
						getAllMembers();
					}}
					testID='NumberSearch'
				/>
				<KeyboardAvoidingView
					style={{ marginHorizontal: '3%' }}
					behavior='padding'
				>
					<View
...
							style={globalStyles.button.search}
							contentStyle={globalStyles.buttonContent.modal}
							labelStyle={[globalStyles.buttonText.search, { paddingTop: 0 }]}
							icon='sort'
							mode='elevated'
							onPress={() => setOrderModal(true)}
							testID='OrderButton'
						>
							{t('button.orderBy')}
						</Button>

						<IconButton
							icon={orderAscending ? 'arrow-down' : 'arrow-up'}
...
							containerColor={theme.colors.elevation.level1}
							onPress={() => {
								invertOrder();
								setOrderAscending(!orderAscending);
							}}
							animated={true}
							testID='OrderReverseButton'
						/>
					</View>
				</KeyboardAvoidingView>

				<FlatList
					data={members}
					renderItem={renderItem}
					keyExtractor={(item) => item.key}
					extraData={refreshFlatlist}
					numColumns={2}
					testID='MembersList'
				/>
			</View>
		</>
	);
}

