...
				onConfirm={onYearReceived}
				testID='EndDatePicker'
			/>

			<View
				style={globalStyles.container.global}
				testID='ProfilePage'
			>
				{loading || !profile ? (
					<ActivityIndicator
						size={75}
						color={theme.colors.primary}
						style={{ margin: 28 }}
...
											}}
											maxLength={6}
											error={memberNumberError}
											autoCapitalize='none'
											keyboardType='numeric'
											label={t('member.memberNumber')}
											testID='MemberNumberInput'
										/>
										{memberNumberError ? (
											<HelperText
												type='error'
												visible={memberNumberError}
												style={globalStyles.text.errorHelper}
...
