appId: com.leandropata.membermanagementapp
---
- assertVisible:
    id: 'HomePage'
- assertVisible:
    id: 'HomeLogo'
- assertVisible:
    id: 'AddButton'
- assertVisible:
    id: 'SearchButton'
- assertVisible:
    id: 'UpdateButton'
- assertVisible:
    id: 'ImportExportButton'
- assertVisible:
    id: 'NFCButton'

- tapOn:
    id: 'AddButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'AddPage'
- back
- assertVisible:
    id: 'HomePage'

- tapOn:
    id: 'SearchButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SearchPage'
- back
- assertVisible:
    id: 'HomePage'

- tapOn:
    id: 'UpdateButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'UpdatePage'
- back
- assertVisible:
    id: 'HomePage'

- tapOn:
    id: 'ImportExportButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'ImportExportPage'
- back
- assertVisible:
    id: 'HomePage'

- tapOn:
    id: 'NFCButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'NFCDisabledDialog'
- assertVisible:
    id: 'DialogConfirmation'
- assertVisible:
    id: 'DialogDismiss'
- tapOn:
    id: 'DialogDismiss'
    retryTapIfNoChange: false
- assertNotVisible: 'NFCDisabledDialog'
- assertVisible:
    id: 'HomePage'
