appId: com.leandropata.membermanagementapp
---
- assertVisible:
    id: 'HomePage'
- assertVisible:
    id: 'ImportExportButton'

- tapOn:
    id: 'ImportExportButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'ImportExportPage'
- assertVisible:
    id: 'ImportButton'
- assertVisible:
    id: 'ExportButton'

- back
- assertVisible:
    id: 'HomePage'
